src/test/ui/codemap_tests/tab_3.stderr
error[E0382]: use of moved value: `some_vec`
  --> $DIR/tab_3.rs:7:20
   |
LL |     some_vec.into_iter();
   |     -------- value moved here
LL |     {
LL |         println!("{:?}", some_vec); //~ ERROR use of moved
   |                          ^^^^^^^^ value used here after move
   |
   = note: move occurs because `some_vec` has type `std::vec::Vec<&str>`, which does not implement the `Copy` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
